adding html file about to push to master

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
     <p class="center"><a href="http://www.edwinau.portfoliobox.net" target="_blank">[ PORTFOLIO ]</a>
     </p>
-    <p class="right"><a href=marbelcontact.htm>[ CONTACT ]</a>
+    <p class="right"><a href=marbelcontact.html>[ CONTACT ]</a>
     </p>
   </h2>
   </body>
