--- a/marbelcontact.html
+++ b/marbelcontact.html
@@ -7,7 +7,7 @@
   </head>
 
   <body background="blackmarbel.jpg">
-    <h1 class="main"><a href="marbelhome.htm">[ EDWIN AU ]</a>
+    <h1 class="main"><a href="marbelhome.html">[ EDWIN AU ]</a>
     </h1>
 
     <hr size=5 color=white>
