changing jpg filenames to work

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8"/>
   </head>
 
-  <body background="whitemarbel.jpg">
+  <body background="whiteMarbel.jpg">
     <h1 class="main"><a href target="_blank">[ EDWIN AU ]</a>
     </h1>
 
