--- a/marbelcontact.html
+++ b/marbelcontact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8"/>
   </head>
 
-  <body background="blackmarbel.jpg">
+  <body background="blackMarbel.jpg">
     <h1 class="main"><a href="marbelhome.html">[ EDWIN AU ]</a>
     </h1>
 
