--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 </html>
   <head>
     <title>edwinau.com</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="marbelhome.css" type="text/css" rel="stylesheet"/>
+
     <meta charset="UTF-8"/>
   </head>
 
-  <body background="whiteMarbel.jpg">
+  <body background="whiteMarbel.jpg" class="img_img">
     <h1 class="main"><a href target="_blank">[ EDWIN AU ]</a>
     </h1>
 
