--- a/marbelcontact.html
+++ b/marbelcontact.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>edwinau.com</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="marbelcontact.css" type="text/css" rel="stylesheet"/>
     <meta charset="UTF-8"/>
   </head>
 
-  <body background="blackMarbel.jpg">
+  <body class:"img_img" background="blackMarbel.jpg" >
     <h1 class="main"><a href="index.html">[ EDWIN AU ]</a>
     </h1>
 
