--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
   <head>
     <title>edwinau.com</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="marbelhome.css" type="text/css" rel="stylesheet"/>
-
+    <link href="stylesheet/index.scss" rel="stylesheet">
     <meta charset="UTF-8"/>
   </head>
 
-  <body background="whiteMarbel.jpg" class="img_img">
-    <h1 class="main"><a href target="_blank">[ EDWIN AU ]</a>
-    </h1>
+  <div class="container_one">
+  <body background="images/marbleWhite.jpg" class="img_img">
+    <div class="container_two">
+      <h1><a href="contact.html" target="_blank">EDWIN AU</a></h1><br>
+      <hr size=5 color=#2f3037>
 
-    <hr size=5 color=#2f3037>
+      <div class="container_three">
+        <h2 class="left"><a href="EDWIN AU.pdf" target="_blank">IN A NUTSHELL</a></h2>
+        <h2 class="center"><a href="http://www.edwinau.portfoliobox.net" target="_blank">PORTFOLIO</a></h2>
+        <h2 class="right"><a href="https://rendezyou.herokuapp.com/" target="_blank">APP</a></p>
+        <h2 class="right_right"><a href=contact.html>CONTACT</a></h2>
+      </div>
 
-  <h2>
-    <p class="left"><a href="EDWIN AU.pdf" target="_blank">[ IN A NUTSHELL ]</a>
-    </p>
-    <p class="center"><a href="http://www.edwinau.portfoliobox.net" target="_blank">[ PORTFOLIO ]</a>
-    </p>
-    <p class="right"><a href=marbelcontact.html>[ CONTACT ]</a>
-    </p>
-  </h2>
+      <div>
   </body>
+</div>
 
   <footer>
   </footer>
+
 </html>
