--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>edwinau.com</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="stylesheet/contact.scss" type="text/css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet/">
+    <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8"/>
   </head>
 
