--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>edwinau.com</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="stylesheet/index.scss" rel="stylesheet">
+    <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8"/>
   </head>
 
