--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html>
+</html>
   <head>
     <title>edwinau.com</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet/">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet/font-awesome.min.css">
   </head>
 
-  <body class:"img_img" background="images/marbleBlack.jpg" >
-    <h1 class="main"><a href="index.html">EDWIN AU</a>
-    </h1>
+  <div class="container_one">
+  <body background="images/marbleBlack.jpg" class="img_img">
+    <div class="container_two">
+      <h3><a href="index.html">EDWIN AU</a></h3><br>
+      <hr class="black">
 
-    <hr size=5 color=white>
+      <div class="container_three">
+        <h4 class="left"><a href="">edwinau@rogers.com</a></h4>
+        <h4 class="center"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><span class="none">Linkedin</span><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="right"><a href="http://www.facebook.com/eauwind" target="_blank"><span class="none">Facebook</span><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="right_right"><a href="http://www.instagram.com" target="_blank"><span class="none">Instagram</span><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
+      </div>
 
-  <h2>
-    <p class="left"><a href target="_blank">edwinau@rogers.com</a>
-    </p>
-    <img class="center"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><img style="float: center" width="3%" height="3%" src="images/linkedin_edwin.png"
-     onmouseover="this.src='images/linkedin_edwin_y.png'" onmouseout="this.src='images/linkedin_edwin.png'" alt="Linkedin_Edwin"/></a></img>
-    <img class="center"><a href="http://www.facebook.com/eauwind" target="_blank"><img style="float: center" width="3%" height="3%" src="images/facebook_edwin.png"
-    onmouseover="this.src='images/facebook_edwin_b.png'"  onmouseout="this.src='images/facebook_edwin.png'"
-    alt="Facebook_Edwin"/></a></img>
-    <img class="center"><a href="http://www.instagram.com" target="_blank"><img style="float: center" width="3%" height="3%" src="images/instagram_edwin.png"
-    onmouseover="this.src='images/instagram_edwin_o.png'"  onmouseout="this.src='images/instagram_edwin.png'"
-    alt="Instagram_Edwin"/></a></img>
-  </h2>
+    </div>
   </body>
-  <footer>
-  </footer>
+</div>
+
+<footer>
+</footer>
+
 </html>
