--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <title>edwinau.com</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <div class="container_one">
   <body background="images/marbleWhite.jpg" class="img_img">
     <div class="container_two">
-      <h1><a href="contact.html" target="_blank">EDWIN AU</a></h1><br>
+      <h1><a href="contact.html">EDWIN AU</a></h1><br>
       <hr size=5 color=#2f3037>
 
       <div class="container_three">
         <h2 class="left"><a href="EDWIN AU.pdf" target="_blank">IN A NUTSHELL</a></h2>
         <h2 class="center"><a href="http://www.edwinau.portfoliobox.net" target="_blank">PORTFOLIO</a></h2>
-        <h2 class="right"><a href="https://rendezyou.herokuapp.com/" target="_blank">APP</a></p>
+        <h2 class="right"><a href="https://rendezyou.herokuapp.com/" target="_blank">APP</a></h2>
         <h2 class="right_right"><a href=contact.html>CONTACT</a></h2>
       </div>
 
-      <div>
+    </div>
   </body>
 </div>
 
-  <footer>
-  </footer>
+<footer>
+</footer>
 
 </html>
