--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 
       <div class="container_three">
         <h4 class="left"><a href="">edwinau@rogers.com</a></h4>
-        <h4 class="center"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><span class="none">Linkedin</span><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
-        <h4 class="right"><a href="http://www.facebook.com/eauwind" target="_blank"><span class="none">Facebook</span><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
-        <h4 class="right_right"><a href="http://www.instagram.com" target="_blank"><span class="none">Instagram</span><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="center"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="right"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="right_right"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
       </div>
 
     </div>
