--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,13 @@
   </body>
 </div>
 
+<div class="main_new">
+  <div class="button_row_new">
+    <div class="flip_button_div"><%=link_to "", new_tour_url, title: "BE A TOUR GUIDE!", class:"flip_button"%></div>
+    <div class="flip_button_div"><%=link_to "", tours_url, title: "BE A TOURIST!", class:"flip_button"%></div>
+  </div>
+</div>
+
 <footer>
 </footer>
 
