new background colors

--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="stylesheet/font-awesome.min.css">
   </head>
 
-  <div class="container_one">
-  <body background="images/marbleBlack.jpg" class="img_img">
+<div class="container_one">
+  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
+  <body bgcolor="black">
     <div class="container_two">
       <h3><a href="index.html">EDWIN AU</a></h3><br>
       <hr class="black">
