--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
 
   <div class="container_one">
-  <body background="images/marbleWhite.jpg" class="img_img">
+  <body>
+  <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
     <div class="container_two">
       <h1><a href="contact.html">EDWIN AU</a></h1><br>
       <hr size=5 color=#2f3037>
