--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>edwinau.com</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/contact.scss" type="text/css" rel="stylesheet">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet/font-awesome.min.css">
@@ -25,13 +25,6 @@
 
     </div>
   </body>
-</div>
-
-<div class="main_new">
-  <div class="button_row_new">
-    <div class="flip_button_div"><%=link_to "", new_tour_url, title: "BE A TOUR GUIDE!", class:"flip_button"%></div>
-    <div class="flip_button_div"><%=link_to "", tours_url, title: "BE A TOURIST!", class:"flip_button"%></div>
-  </div>
 </div>
 
 <footer>
