changes to main page hover effect

--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js'></script>
   </head>
 
-  <div class="container_one">
   <body>
+    <div class="container_one">
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
-    <div class="container_two">
-      <h1><a href="contact.html">EDWIN AU</a></h1><br>
-      <hr size=5 color=#2f3037>
+      <div class="container_two">
+        <h1><a href="contact.html">EDWIN AU</a></h1><br>
+        <hr size=5 color=#2f3037>
 
-      <div class="container_three">
-        <h2 class="left"><a href="EDWIN AU.pdf" target="_blank">IN A NUTSHELL</a></h2>
-        <h2 class="center"><a href="http://www.edwinau.portfoliobox.net" target="_blank">PORTFOLIO</a></h2>
-        <h2 class="right"><a href="https://rendezyou.herokuapp.com/" target="_blank">APP</a></h2>
-        <h2 class="right_right"><a href=contact.html>CONTACT</a></h2>
-      </div>
-
+        <div class="container_three">
+          <h2 class="left button-row"><a href="EDWIN AU.pdf" target="_blank" title="IN A NUTSHELL"></a></h2>
+          <h2 class="center button-row"><a href="http://www.edwinau.portfoliobox.net" target="_blank" title="PORTFOLIO"></a></h2>
+          <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
+          <h2 class="right_right button-row"><a href=contact.html title="CONTACT"></a></h2>
+        </div>
+      </div >
     </div>
+
   </body>
-</div>
 
 <footer>
 </footer>
