--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>edwinau.com</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="stylesheet/marbWhite.scss" type="text/css" rel="stylesheet">
+    <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
