hover transition over name is now ease

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 </html>
   <head>
     <title>edwinau.com</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway" rel="stylesheet">
     <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <meta charset="UTF-8"/>
