font awesome works and phone view done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>edwinau.com</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway" rel="stylesheet">
     <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="stylesheet/font-awesome.min.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js'></script>
