--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 </html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>edwinau.com</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway" rel="stylesheet">
-    <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheet/font-awesome.min.css">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheet/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js'></script>
+    <script src='stylesheet/somejs.js'></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway|Cabin+Sketch" rel="stylesheet">
+    <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
+
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
   </head>
 
   <body>
@@ -16,15 +24,104 @@
       <div class="container_two">
         <h1><a href="contact.html">EDWIN AU</a></h1><br>
         <hr size=5 color=#2f3037>
-
         <div class="container_three">
-          <h2 class="left button-row"><a href="EDWIN AU.pdf" target="_blank" title="IN A NUTSHELL"></a></h2>
+          <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="http://www.edwinau.portfoliobox.net" target="_blank" title="PORTFOLIO"></a></h2>
           <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
           <h2 class="right_right button-row"><a href=contact.html title="CONTACT"></a></h2>
         </div>
-      </div >
+      </div>
     </div>
+
+
+    <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 100vh" class="img_relative"> -->
+      <div style="
+      background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+      linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+      linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+      linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+      linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+      linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%,
+      transparent 50%, transparent 75%, #242424 75%, #242424);
+      background-color: #131313; background-size: 20px 20px;
+      width: 100vw; height: 100vh" class="img_relative">
+
+
+
+      <img src="images/plant.png" class="img_absolute img_plant">
+      <img src="images/labtop.png" class="img_absolute img_labtop">
+      <div class="container_nut">
+        <div class="container-fluid nut">
+          <div class="row nut">
+            <div class="col-md-5">
+              <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p>
+              <!-- <hr class="white_break"> -->
+              <p class="i_believe"> <br><br> I believe websites can change people's lives. </p>
+
+            </div>
+            <div class="col-md-7">
+              <img src="images/EDWIN AU.jpg" class="resume_pdf">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+<!-- <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="carousel slide" id="carousel-768363">
+				<ol class="carousel-indicators">
+					<li class="active" data-slide-to="0" data-target="#carousel-768363">
+					</li>
+					<li data-slide-to="1" data-target="#carousel-768363">
+					</li>
+					<li data-slide-to="2" data-target="#carousel-768363">
+					</li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="item active">
+						<img alt="Carousel Bootstrap First" src="http://lorempixel.com/output/sports-q-c-1600-500-1.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								First Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+					<div class="item">
+						<img alt="Carousel Bootstrap Second" src="http://lorempixel.com/output/sports-q-c-1600-500-2.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								Second Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+					<div class="item">
+						<img alt="Carousel Bootstrap Third" src="http://lorempixel.com/output/sports-q-c-1600-500-3.jpg" />
+						<div class="carousel-caption">
+							<h4>
+								Third Thumbnail label
+							</h4>
+							<p>
+								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							</p>
+						</div>
+					</div>
+				</div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+			</div>
+		</div>
+	</div>
+</div> -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="stylesheet/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
   </body>
 
