fixing portfolio size

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </div>
 
 
-<div class="container_relative" id="carousel">
+<div class="container_carousel" id="carousel">
 
 <div class="container-fluid ninetywidth">
 	<div class="row">
