--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/carousel.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/media_labtop.css" type="text/css" rel="stylesheet">
+
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
 
@@ -56,13 +58,13 @@
       <div class="container_nut">
         <div class="container-fluid nut">
           <div class="row nut">
-            <div class="col-md-5">
+            <div class="col-md-10">
               <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
               <!-- <hr class="white_break"> -->
-              <p class="i_believe">I believe websites should inspire people's lives. <br>  <span class="italic">Are we on the same page?</span> </p>
+              <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
             </div>
-            <div class="col-md-7">
+            <div class="col-md-12" id="labtopresumewidth">
               <img src="images/EDWIN AU.jpg" class="resume_pdf">
             </div>
           </div>
