--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%,
       transparent 50%, transparent 75%, #242424 75%, #242424);
       background-color: #131313; background-size: 20px 20px;
-      width: 100vw;" class="img_relative" id="resume_pdf">
+      width: 100vw;" class="img_relative labtop" id="resume_pdf">
 
 
 
