--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container_one" id="backtotop">
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class="">EDWIN AU</h1><br>
+        <h1 class=""><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
         <hr size=5 color=#2f3037>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
@@ -65,7 +65,7 @@
 
             </div>
             <div class="col-md-12" id="labtopresumewidth">
-              <img src="images/EDWIN AU.jpg" class="resume_pdf">
+              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" class="resume_pdf"></a>
             </div>
           </div>
         </div>
@@ -304,7 +304,7 @@
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
     <div class="container_two">
       <div class="container_contacts" id="contactme">
-        <h4 class="email"><a href="" class="email">edwinau@rogers.com</a></h4>
+        <h4 class="email"><a href="mailto:edwinau@rogers.com?subject= Hello Edwin!" class="email">edwinau@rogers.com</a></h4>
         <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
         <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
         <h4 class="instagram"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
