refined quotes section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   </div>
 
-  <div style="background-color: #2E4600; width: 100vw; height: 100vh" class="container_one quote_container quotetwo">
+  <div style="background-color: #123d00; width: 100vw; height: 100vh" class="container_one quote_container quotetwo">
     <p class="sixtysix">&#8220</p>
 
     <div class="quote embossed container_two quotetwo">Any product that needs a manual to work is broken.
