--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container_one" id="backtotop">
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class=""><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
+        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
         <hr size=5 color=#2f3037>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
