--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
   </head>
 
   <body>
-    <div class="container_one" id="backtotop">
+    <div style="background-color: white; width: 100vw; height: 100vh" class="container_one" id="backtotop">
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
+        <h1 class="edwinname hover_effect"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
         <hr size=5 color=#2f3037>
         <div class="container_three">
-          <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
-          <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
-          <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
-          <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
+          <h2 class="left button-row hover_effect"><a href="#hello" target="" title="ABOUT ME"></a></h2>
+          <h2 class="center button-row hover_effect"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
+          <h2 class="right button-row hover_effect"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
+          <h2 class="right_right button-row hover_effect"><a href="#contactme" title="CONTACT"></a></h2>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
 
             </div>
             <div class="col-md-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" class="resume_pdf"></a>
+              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
             </div>
           </div>
         </div>
@@ -138,51 +138,51 @@
 <div class="container_carousel" id="carousel">
 
 <div class="container-fluid ninetywidth">
-	<div class="row">
-		<div class="col-md-12 nopadding">
-			<div class="carousel slide" id="carousel-768363">
-				<ol class="carousel-indicators">
-					<li class="active" data-slide-to="0" data-target="#carousel-768363">
-					</li>
-					<li data-slide-to="1" data-target="#carousel-768363">
-					</li>
-					<li data-slide-to="2" data-target="#carousel-768363">
-					</li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="item active" data-interval="1000">
-						<img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
-						<div class="carousel-caption">
-							<h4>
-								<!-- First Thumbnail label -->
-							</h4>
-							<p>
-								<!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-							</p>
-						</div>
-					</div>
-					<div class="item">
-						<img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
-						<div class="carousel-caption">
-							<h4>
-								<!-- Second Thumbnail label -->
-							</h4>
-							<p>
-								<!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-							</p>
-						</div>
-					</div>
-					<div class="item">
-						<img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg", class="portfolio_images">
-						<div class="carousel-caption">
-							<h4>
-								<!-- Third Thumbnail label -->
-							</h4>
-							<p>
-								<!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-							</p>
-						</div>
-					</div>
+  <div class="row">
+    <div class="col-md-12 nopadding">
+      <div class="carousel slide" id="carousel-768363">
+        <ol class="carousel-indicators">
+          <li class="active" data-slide-to="0" data-target="#carousel-768363">
+          </li>
+          <li data-slide-to="1" data-target="#carousel-768363">
+          </li>
+          <li data-slide-to="2" data-target="#carousel-768363">
+          </li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active" data-interval="1000">
+            <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
+            <div class="carousel-caption">
+              <h4>
+                <!-- First Thumbnail label -->
+              </h4>
+              <p>
+                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
+            <div class="carousel-caption">
+              <h4>
+                <!-- Second Thumbnail label -->
+              </h4>
+              <p>
+                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
+              </p>
+            </div>
+          </div>
+          <div class="item">
+            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg", class="portfolio_images">
+            <div class="carousel-caption">
+              <h4>
+                <!-- Third Thumbnail label -->
+              </h4>
+              <p>
+                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
+              </p>
+            </div>
+          </div>
 
           <div class="item">
             <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg", class="portfolio_images">
@@ -209,16 +209,16 @@
           </div>
 
           <div class="item">
-						<img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg", class="portfolio_images">
-						<div class="carousel-caption">
-							<h4>
-								<!-- Third Thumbnail label -->
-							</h4>
-							<p>
-								<!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-							</p>
-						</div>
-					</div>
+            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg", class="portfolio_images">
+            <div class="carousel-caption">
+              <h4>
+                <!-- Third Thumbnail label -->
+              </h4>
+              <p>
+                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
+              </p>
+            </div>
+          </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg", class="portfolio_images">
@@ -285,10 +285,10 @@
 
 
 
-				</div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-			</div>
-		</div>
-	</div>
+        </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+      </div>
+    </div>
+  </div>
 </div>
 
 </div>
