--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <div style="background-color: white; width: 100vw; height: 100vh" class="container_one" id="backtotop">
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
-        <h1 class="edwinname hover_effect"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
+        <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
         <hr size=5 color=#2f3037>
         <div class="container_three">
-          <h2 class="left button-row hover_effect"><a href="#hello" target="" title="ABOUT ME"></a></h2>
-          <h2 class="center button-row hover_effect"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
-          <h2 class="right button-row hover_effect"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
-          <h2 class="right_right button-row hover_effect"><a href="#contactme" title="CONTACT"></a></h2>
+          <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
+          <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
+          <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
+          <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
         </div>
       </div>
     </div>
