--- a/index.html
+++ b/index.html
@@ -57,13 +57,20 @@
       <img src="images/labtop.png" class="img_absolute img_labtop">
       <div class="container_nut">
         <div class="container-fluid nut">
+          <div class="imac displaynone">
+            <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
+            <!-- <hr class="white_break"> -->
+            <p class="i_believe">I believe websites should inspire people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
+
+          </div>
           <div class="row nut">
-            <div class="col-md-10">
+            <div class="col-md-10 ipad displaynone">
               <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
               <!-- <hr class="white_break"> -->
               <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
             </div>
+
             <div class="col-md-12" id="labtopresumewidth">
               <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
             </div>
@@ -74,7 +81,7 @@
 
 <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
 
-<div class="container_relative" id="quoteelon">
+<div class="container_relative ipadcarou" id="quoteelon">
 
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotezero">
     <p class="sixtysix">&#8220</p>
@@ -299,15 +306,15 @@
   background: -o-linear-gradient(black, #33273d); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(black, #33273d); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, #33273d); /* Standard syntax */
-  width: 100vw; height: 100vh" class="container_one">
+  width: 100vw; height: 100vh" class="container_one contactpage">
   <img src="images/city_contact.png" class="img_contact">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
-    <div class="container_two">
+    <div class="container_two contact">
       <div class="container_contacts" id="contactme">
-        <h4 class="email"><a href="mailto:edwinau@rogers.com?subject= Hello Edwin!" class="email">edwinau@rogers.com</a></h4>
-        <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
-        <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4>
-        <h4 class="instagram"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="email"><a href="mailto:edwinau@rogers.com?subject= Hello Edwin!" class="email">edwinau@rogers.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="instagram"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
   </body>
