--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
   background: -moz-linear-gradient(black, #33273d); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, #33273d); /* Standard syntax */
   width: 100vw; height: 100vh" class="container_one contactpage">
-  <img src="images/city_contact.png" class="img_contact">
+  <img src="images/city_contact.png" class="img_contact" id="contactme">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
     <div class="container_two contact">
-      <div class="container_contacts" id="contactme">
+      <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinau@rogers.com?subject= Hello Edwin!" class="email">edwinau@rogers.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
