2nd revision for big iMac

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src='stylesheet/somejs.js'></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway|Cabin+Sketch|Pacifico" rel="stylesheet">
+    <link href="stylesheet/reset.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
@@ -25,7 +26,7 @@
   </head>
 
   <body>
-    <div style="background-color: white; width: 100vw; height: 100vh" class="container_one" id="backtotop">
+    <div style="background-color: white; width: 100vw; height: 100vh" class="container_one intro" id="backtotop">
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
@@ -287,10 +288,6 @@
               </p>
             </div>
           </div>
-
-
-
-
 
         </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
       </div>
