ipad vertical responsive

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <div class="container_carousel" id="carousel">
 
 <div class="container-fluid ninetywidth">
-  <div class="row">
+  <div class="row carousel">
     <div class="col-md-12 nopadding">
       <div class="carousel slide" id="carousel-768363">
         <!-- <ol class="carousel-indicators">
