vertical ipad complete

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 </div>
 
-
+<div class="carolcarolcon">
 <div class="container_carousel" id="carousel">
 
 <div class="container-fluid ninetywidth">
@@ -295,6 +295,7 @@
   </div>
 </div>
 
+</div>
 </div>
 
 <div style="
