--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
   </head>
 
   <body>
-    <div style="background-color: white; width: 100vw; height: 100vh" class="container_one intro" id="backtotop">
+    <div style="background: red; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    width: 100vw; height: 100vh" class="container_one intro" id="backtotop">
+      <img src="images/introcloud2.png" class="img_introcloud3">
+      <img src="images/introcloud4.png" class="img_introcloud2">
+      <img src="images/introcloud3.png" class="img_introcloud4">
+
+
+      <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
+      <img src="images/intrograss.png" class="img_intrograss" id="intrograss">
+
+
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
-        <hr size=5 color=#2f3037>
+        <hr size=5px color=white>
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
-          <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="MY NEW APP"></a></h2>
+          <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou"></a></h2>
           <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
         </div>
       </div>
@@ -42,15 +56,15 @@
 
       <div style="
       background:
-      linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-      linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-      linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-      linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-      linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-      linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%,
+      -webkit-linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+      -webkit-linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+      -webkit-linear-gradient(27-20, #222 5px, transparent 5px) 0px 10px,
+      -webkit-linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+      -webkit-linear-gradient(45deg, #1b1b1b 10px, transparent 10px),
+      -webkit-linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%,
       transparent 50%, transparent 75%, #242424 75%, #242424);
       background-color: #131313; background-size: 20px 20px;
-      width: 100vw;" class="img_relative labtop" id="resume_pdf">
+      width: 100vw;", class="img_relative labtop", id="resume_pdf">
 
 
 
