--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <div style="background: red; /* For browsers that do not support gradients */
+    <div style="background:
     background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
@@ -56,15 +56,18 @@
 
       <div style="
       background:
-      -webkit-linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-      -webkit-linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-      -webkit-linear-gradient(27-20, #222 5px, transparent 5px) 0px 10px,
-      -webkit-linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-      -webkit-linear-gradient(45deg, #1b1b1b 10px, transparent 10px),
-      -webkit-linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%,
-      transparent 50%, transparent 75%, #242424 75%, #242424);
-      background-color: #131313; background-size: 20px 20px;
+      linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+      linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+      linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+      linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+      linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+      linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+      background-color: #131313;
+      background-size: 20px 20px;
       width: 100vw;", class="img_relative labtop", id="resume_pdf">
+
+
+
 
 
 
