carousel bug fix

--- a/index.html
+++ b/index.html
@@ -65,37 +65,31 @@
       background-color: #131313;
       background-size: 20px 20px;
       width: 100vw;", class="img_relative labtop", id="resume_pdf">
-
-
-
-
-
-
-      <img src="images/plant.png" class="img_absolute img_plant">
-      <img src="images/labtop.png" class="img_absolute img_labtop">
-      <div class="container_nut">
-        <div class="container-fluid nut">
-          <div class="imac displaynone">
-            <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
-            <!-- <hr class="white_break"> -->
-            <p class="i_believe">I believe websites should inspire people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
-
-          </div>
-          <div class="row nut">
-            <div class="col-md-10 ipad displaynone">
-              <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
+        <img src="images/plant.png" class="img_absolute img_plant">
+        <img src="images/labtop.png" class="img_absolute img_labtop">
+        <div class="container_nut">
+          <div class="container-fluid nut">
+            <div class="imac displaynone">
+              <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
               <!-- <hr class="white_break"> -->
-              <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
+              <p class="i_believe">I believe websites should inspire people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
 
             </div>
+            <div class="row nut">
+              <div class="col-md-10 ipad displaynone">
+                <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
+                <!-- <hr class="white_break"> -->
+                <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
-            <div class="col-md-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
+              </div>
+
+              <div class="col-md-12" id="labtopresumewidth">
+                <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
 <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
 
@@ -159,7 +153,7 @@
 
 </div>
 
-<div class="carolcarolcon">
+<!-- <div class="carolcarolcon"> -->
 <div class="container_carousel" id="carousel">
 
 <div class="container-fluid ninetywidth">
@@ -313,7 +307,7 @@
 </div>
 
 </div>
-</div>
+<!-- </div> -->
 
 <div style="
   background: red; /* For browsers that do not support gradients */
