--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN AU</a></h1><br>
-        <hr size=5px color=white>
+        <hr size=5px color=white class="ipad displaynone">
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
