fix jumping carousel

--- a/index.html
+++ b/index.html
@@ -288,17 +288,11 @@
           </div>
 
 
-          <div class="item">
+          <!-- <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 12 - Disney Belle.jpg", class="portfolio_images">
             <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
             </div>
-          </div>
+          </div> -->
 
         </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
       </div>
