--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
   <div class="row carousel">
     <div class="col-md-12 nopadding">
       <div class="carousel slide" id="carousel-768363">
-        <!-- <ol class="carousel-indicators">
-          <li class="active" data-slide-to="0" data-target="#carousel-768363">
+        <ol class="carousel-indicators">
+          <!-- <li class="active" data-slide-to="0" data-target="#carousel-768363">
           </li>
           <li data-slide-to="1" data-target="#carousel-768363">
           </li>
           <li data-slide-to="2" data-target="#carousel-768363">
-          </li>
-        </ol> -->
+          </li> -->
+        </ol>
         <div class="carousel-inner">
           <div class="item active" data-interval="1000">
             <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
